# opl3duo-rust

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 515n4yqr6s8xlfj0cmwb9ask2zn3ywf2-source  imqahnlb80bgilcxiw20zdv9dgzia0i8-source
src/: main.rs  serial.rs
